Add floor plan overview and updated layout description

--- a/index.html
+++ b/index.html
@@ -108,6 +108,35 @@
         </div>
     </section>
 
+    <!-- Plan overview section providing a narrative of the layout -->
+    <section id="plan-overview" class="section plan-overview">
+        <div class="container">
+            <h2>Floor Plan Overview</h2>
+            <p>
+                Set on nearly half an acre with an all‑new foundation, this ground‑up build is designed for light,
+                volume and easy everyday living. Enjoy <strong>9‑ft ceilings</strong> on the ground and first floors
+                and a <strong>double‑height living room open to above</strong> anchored by a <strong>wall of windows</strong>.
+            </p>
+            <h3>First Floor</h3>
+            <ul>
+                <li>Two‑story foyer flowing to a dramatic living/family room open to above</li>
+                <li><strong>Chef’s kitchen</strong> with breakfast nook and walk‑in pantry</li>
+                <li>Formal dining room off the foyer</li>
+                <li><strong>One flexible bedroom</strong> on this level (guest suite/office) with a full bath</li>
+                <li>Direct‑entry 2‑car garage with convenient mud/closet area</li>
+            </ul>
+            <h3>Second Floor</h3>
+            <ul>
+                <li>Private primary wing with spa bath (separate shower and soaking tub)</li>
+                <li>Oversized <strong>10' × 11' walk‑in closet room</strong> (shown as “bonus room” on the plans)</li>
+                <li>Three additional bedrooms and two additional full baths</li>
+                <li>Dedicated laundry room on the bedroom level</li>
+                <li>Open hall overlooks to the level below for an airy, connected feel</li>
+            </ul>
+            <p><em>Total: 6 bedrooms, 4 full baths. Artist’s rendering – final layout and dimensions may vary.</em></p>
+        </div>
+    </section>
+
     <!-- Floor plans section placed immediately after the property description -->
     <section id="floor-plans" class="floor-plans section">
         <div class="container">
